# tda-segmentor

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  headers.h  instructions.cpp  logger.h  main.cpp  parameters.cpp  parameters.h  poretda.cpp  poretda.h  segmentor.cpp  segmentor.h
docs/: README.md  tda-segmentor-documentation.tex
postprocessing/: CombineAdsorptionAndVolumeMethane.py  Graph_representation.py  Mesh_Representation.py  README.md  SaveSegmentsHistograms.py  combineAdsorptionAndVolume.py  main.py  plotPersistenceCurve.py  tryWithVolume.py  try_IZA.py  zeoPy.py
src/: PEgrid.cpp  PEgrid.h  additional-code.cpp  distanceGrid.cpp  distanceGrid.h  grid.cpp  grid.h  headers.h  instructions.cpp  instructions.h  logger.cpp  logger.h  main.cpp  parameters.cpp  parameters.h  segmenteddata.h  segmentor.cpp  segmentor.h
